src/objects/npsp__Batch__c.object
<CustomObject>
    <description>The holding object for batch entry. Interaction with this object should occur only through the Batch Data Entry tab.</description>
    <fields>
        <fullName>npsp__Batch_Status__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Items__c</fullName>
        <label>Number of Items</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Object_Name__c</fullName>
        <description>API Name of the object of which this is a batch.</description>
        <inlineHelpText>API Name of the object of which this is a batch.</inlineHelpText>
        <label>Object Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Batch</label>
    <listViews>
        <fullName>npsp__All</fullName>
        <columns>NAME</columns>
        <columns>npsp__Batch_Status__c</columns>
        <columns>npsp__Object_Name__c</columns>
        <columns>npsp__Number_of_Items__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>npsp__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>npsp__Completed_Batches</fullName>
        <columns>NAME</columns>
        <columns>npsp__Batch_Status__c</columns>
        <columns>npsp__Object_Name__c</columns>
        <columns>npsp__Number_of_Items__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>npsp__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Batch_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed Batches</label>
    </listViews>
    <listViews>
        <fullName>npsp__Open_Batches</fullName>
        <columns>NAME</columns>
        <columns>npsp__Batch_Status__c</columns>
        <columns>npsp__Object_Name__c</columns>
        <columns>npsp__Number_of_Items__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>npsp__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Batch_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Open Batches</label>
    </listViews>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>